<resources>
    <string name="app_name">Around Egypt</string>
    <string name="label_description">Description</string>
    <string name="contentDesc_menuIcon">a hamburger menu item</string>
    <string name="contentDesc_settingsIcon">an icon representing a filter to navigate to settings.</string>
    <string name="label_welcome">Welcome!</string>
    <string name="message_welcome">Now you can explore any experience in 360 degrees and get all the details about it all in one place.</string>
    <string name="label_recommendedExperiences">Recommended Experiences</string>
    <string name="label_mostRecent">Most Recent</string>
    <string name="contentDesc_heartImage">An image of a heart</string>
    <string name="contentDesc_views">An image of an eye, representing the number of views.</string>
    <string name="label_recommended">RECOMMENDED</string>
    <string name="contentDesc_360_degree">An image representing 360 degree vision.</string>
    <string name="contentDesc_upload">An image representing upload.</string>
    <string name="contentDesc_experiencePhoto">Image of the experience</string>
    <string name="label_exploreNow">Explore Now</string>
    <string name="contentDesc_images">An image representing multiple photos.</string>
    <string name="label_views">views</string>
</resources>