<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:id="@+id/frameLayout_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/layout_welcome">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_recommendedExperiences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </ScrollView>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/frameLayout_horizontal"
        tools:layout_editor_absoluteX="-26dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            tools:layout_editor_absoluteX="0dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_allExperiences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="407dp"
        android:layout_height="45dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView_menu"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/contentDesc_menuIcon"
            app:srcCompat="@drawable/ic_menu_burger" />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_weight="1"
            android:background="@color/cardview_shadow_start_color"
            android:hint="Try Luxor!"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            />

        <ImageView
            android:id="@+id/imageView_setting"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/contentDesc_settingsIcon"
            app:srcCompat="@drawable/ic_settings_filter" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintBottom_toTopOf="@id/frameLayout_horizontal">

        <TextView
            android:id="@+id/textView_welcomeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/label_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_welcomeMessage"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:paddingStart="16dp"
            android:paddingLeft="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="8dp"
            android:text="@string/message_welcome"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>